--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,13 @@
 set(SRCS
 	mdns/mdns.c
 	mdns/mdns.h
-	export.h
-	cxmdns.h
+	include/cxmdns.h
 	cxmdns.cpp)
 	
 set(LIBS )
 set(INCS ${CMAKE_CURRENT_SOURCE_DIR}/mdns ${CMAKE_CURRENT_SOURCE_DIR}/include)
 if(WIN32)
-  APPEND(LIBS iphlpapi ws2_32)
+  list(APPEND LIBS iphlpapi ws2_32)
 endif()
 	
 __add_real_target(cxmdns dll SOURCE ${SRCS} LIB ${LIBS} INC ${INCS} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include )
