--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
 set(SRCS
 	mdns/mdns.c
 	mdns/mdns.h
-	include/cxmdns.h
+	include/cxmdns/cxmdns.h
 	cxmdns.cpp)
 	
+add_definitions(-DCX_MDNS)
 set(LIBS )
-set(INCS ${CMAKE_CURRENT_SOURCE_DIR}/mdns ${CMAKE_CURRENT_SOURCE_DIR}/include)
 if(WIN32)
   list(APPEND LIBS iphlpapi ws2_32)
 endif()
+
+set(INCS ${CMAKE_CURRENT_SOURCE_DIR}/mdns ${CMAKE_CURRENT_SOURCE_DIR}/include)
 	
-__add_real_target(cxmdns dll SOURCE ${SRCS} LIB ${LIBS} INC ${INCS} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include )
+__add_real_target(cxmdns lib SOURCE ${SRCS} LIB ${LIBS} INC ${INCS} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include )
